updated streaming page

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -10,6 +10,7 @@
         crossorigin="anonymous" />
     <title>{% block title %}DJ Stream{% endblock %}</title>
     {% block head %}{% endblock %}
+    <script type="text/javascript" src="/static/jquery-1.7.1.min.js"></script>
 </head>
 
 <body>
