--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -5,9 +5,18 @@
 {% endblock %}
 
 {% block title %}
-This is the home page
+This is the Music Player
 {% endblock %}
 
 {% block body %}
-Hello, welcome to DJ Stream!
+<audio controls="controls" autoplay="autoplay"></audio>
+<ul>
+    {% for song in songs %}
+        <li><a href="javascript:void(0);" onclick="playSong('{{song}}')">{{song}}</a></li>
+    {% endfor %}
+<script type="text/javascript">
+    function playSong(song) {
+        $('audio').attr('src', '/static/assets/'+song);
+    }
+</script>
 {% endblock %}
